# ndarray

./: .gitignore  CHANGELOG.md  CI_FIXES.md  CI_FIX_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  CTestTestfile.cmake  DIMENSION_ORDERING_FIXES_SUMMARY.md  DISTRIBUTED_INDEXING_CLARIFICATION.md  DISTRIBUTED_STREAM_REDESIGN.md  ERROR_HANDLING_PHASES_1-4_COMPLETE.md  GPU_AWARE_MPI_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IO_BACKEND_AGNOSTIC.md  MAINTENANCE-MODE.md  MULTICOMPONENT_ARRAYS.md  Makefile  PARALLEL_HDF5_STATUS.md  PHASE1_ERROR_HANDLING_COMPLETE.md  PHASE4_STREAM_INTEGRATION.md  RACE_CONDITION_FIXES.md  README.md  ROADMAP.md  STABILIZATION_PLAN.md  SYNTHETIC_STREAMS_SUMMARY.md  TRANSPOSE_IMPLEMENTATION_SUMMARY.md  TRANSPOSE_QUICK_REFERENCE.md  UNIFIED_NDARRAY_PROGRESS.md  WILKINS_QUICKSTART.md  build_with_wilkins.sh  cmake_install.cmake  compile_commands.json  install_wilkins.sh  ndarrayConfig.cmake  verify_wilkins_deps.sh
.cache/clangd/index/: benchmark_storage.cpp.E5A6F510B68B09A8.idx  device.hh.2C79AA9B94B570F9.idx  error.hh.2A1A1F237A87C22A.idx  lattice.hh.366E29BE582ED4E6.idx  lattice_partitioner.hh.D4ED8E9242F92710.idx  murmurhash2.hh.A4EED6FC03452DA4.idx  native_storage.hh.BD43810F4F167A55.idx  ndarray.cpp.F2021A6BE23E0140.idx  ndarray.hh.B9023EF32B322685.idx  ndarray_base.hh.197B7B97F7287B9F.idx  ndarray_group.hh.3DAC8971E6FB36C5.idx  reference_ghost_exchange.cpp.35613566602FCC49.idx  storage_policy.hh.FAF57CDCA686A6D4.idx  test_arbitrary_ghosts.cpp.4C49052A504D01F7.idx  test_distributed_ndarray.cpp.303C46B3C1F6260D.idx  (+12 more)
.github/workflows/: ci.yml
cmake/: Catch.cmake  ndarrayConfig.cmake.in
docs/: ARRAY_ACCESS.md  ARRAY_INDEXING.md  BACKENDS.md  BACKEND_DESIGN.md  CRITICAL_ANALYSIS.md  DIMENSION_ORDERING.md  DISTRIBUTED_INDEXING_CLARIFICATION.md  DISTRIBUTED_NDARRAY.md  ERROR_HANDLING.md  EXCEPTION_HANDLING.md  FDPOOL.md  FORTRAN_C_CONVENTIONS.md  GETTING_STARTED.md  GPU_AWARE_MPI_PLAN.md  GPU_AWARE_MPI_SUMMARY.md  GPU_SUPPORT.md  HDF5_TIMESTEPS_PER_FILE.md  HPC_DEPENDENCY_STRATEGY.md  INDEX.md  MAINTENANCE-MODE.md  MULTICOMPONENT_ARRAYS.md  MULTICOMPONENT_ARRAYS_DISTRIBUTED.md  OPTIONAL_YAML.md  PARALLEL_HDF5.md  PNETCDF_TESTS.md  PNG_SUPPORT.md  README.md  ROADMAP.md  STORAGE_BACKENDS.md  STUDENT_ISSUES.md  SYNTHETIC_YAML_STREAMS_COMPLETION_REPORT.md  TIME_DIMENSION.md  TRANSPOSE_DESIGN.md  TRANSPOSE_DISTRIBUTED.md  TRANSPOSE_GPU.md  TRANSPOSE_GPU_MPI.md  TRANSPOSE_METADATA_FIX_SUMMARY.md  TRANSPOSE_METADATA_HANDLING.md  TRANSPOSE_QUICK_REFERENCE.md  TRANSPOSE_STATUS.md  (+6 more)
docs/archive/: ADIOS2_TESTS.md  CMAKE_SIMPLIFICATION.md  PHASE3_IO_AUTO_DETECTION.md  VARIABLE_NAMING_BEST_PRACTICES.md  VARIABLE_NAMING_PROBLEMS.md  VTK_TESTS.md  WEEK1_TASKS.md
docs/progress/: CI_FIX_SUMMARY.md  CRITICAL_ANALYSIS.md  ERROR_HANDLING_UNIFICATION_PLAN.md  GPU_MINIMAL_FIX_COMPLETE.md  GPU_RAII_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY_2026-02-20.md  PARALLEL_HDF5_CLARIFICATION.md  QUICK_WINS_BUNDLE_COMPLETE.md
examples/: CMakeLists.txt  README.md  basic_usage.cpp  convolution.cpp  device_memory.cpp  distributed_analysis.cpp  distributed_io.cpp  distributed_stencil.cpp  distributed_stream.cpp  distributed_stream_dryrun.cpp  distributed_stream_yaml.cpp  distributed_synthetic_stream.yaml  io_operations.cpp  parallel_mpi.cpp  storage_backends.cpp  sycl_acceleration.cpp  transpose_example.cpp  vector_conversion_example.cpp
include/ndarray/: config.hh  config.hh.in  conv.hh  device.hh  distributed_ndarray.hh  distributed_ndarray_group.hh  distributed_ndarray_group_stream.hh  distributed_ndarray_stream.hh  error.hh  fdpool.hh  grad.hh  lattice.hh  lattice_partitioner.hh  murmurhash2.hh  ndarray.hh  ndarray_backend.hh  ndarray_base.hh  ndarray_cuda.hh  ndarray_eigen.hh  ndarray_group.hh  ndarray_group_stream.hh  ndarray_hip.hh  ndarray_mpi_gpu.hh  ndarray_png.hh  ndarray_stream.hh  ndarray_stream_adios2.hh  ndarray_stream_binary.hh  ndarray_stream_hdf5.hh  ndarray_stream_netcdf.hh  ndarray_stream_synthetic.hh  ndarray_stream_vtk.hh  ndarray_xtensor.hh  synthetic.hh  transpose.hh  transpose_cuda.hh  transpose_distributed.hh  transpose_distributed_gpu.hh  util.hh  variable_name_utils.hh
modules/: README.md  template.sh
spack/: README.md  package.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  dryrun.cpp  ndarray_cuda.cu
tests/: CMakeLists.txt  CMakeLists_old.txt  CTestTestfile.cmake  Makefile  README.md  benchmark_storage.cpp  cmake_install.cmake  reference_ghost_exchange.cpp  test_adios2.cpp  test_adios2_parallel.cpp  test_adios2_stream.cpp  test_arbitrary_ghosts.cpp  test_arithmetic.cpp  test_data_ops.cpp  test_dimension_order_refactor.cpp  test_distributed_ndarray.cpp  test_distributed_yaml_stream.cpp  test_exception_handling.cpp  test_fc_ordering.cpp  test_ghost_exchange.cpp  test_gpu.cpp  test_gpu_kernels.cpp  test_gradient.cpp  test_hdf5_auto.cpp  test_hdf5_exceptions.cpp  test_ndarray_core.cpp  test_ndarray_hdf5.cpp  test_ndarray_io.cpp  test_ndarray_stream.cpp  test_pnetcdf.cpp  test_pnetcdf_auto.cpp  test_png.cpp  test_statistics.cpp  test_storage_backends.cpp  test_storage_io.cpp  test_storage_memory.cpp  test_storage_streams.cpp  test_transpose.cpp  test_transpose_cuda.cpp  test_transpose_distributed.cpp  (+8 more)
yaml_exampls/: 5jets.yaml  INDEX.md  SYNTHETIC_STREAMS_OVERVIEW.md  SYNTHETIC_STREAMS_README.md  abc_flow_3d.yaml  benchmark_synthetic.yaml  capped_woven_gradient_2d.yaml  cm1.yaml  combustion.yaml  complex_3d_multi_field.yaml  cylinder2D-writer.yaml  cylinder2D.yaml  distributed_abc_flow.yaml  distributed_merger.yaml  distributed_tornado.yaml  double_gyre_2d.yaml  high_resolution_woven.yaml  island_coalescence.yaml  merger_2d.yaml  moving_dual_ramp_3d.yaml  moving_extremum_2d.yaml  moving_extremum_3d.yaml  moving_ramp_3d.yaml  mpas.yaml  mpas1.yaml  mpas_with_patterns.yaml  multi_resolution_woven.yaml  multi_synthetic_features.yaml  small_test_synthetic.yaml  supernova.yaml  time_varying_double_gyre.yaml  tornado_3d.yaml  volcano_2d.yaml  woven-writer.yaml  woven.yaml  xgc_adios2.yaml  xgc_h5.yaml
(+4 files in other folders)
